assignment_2/src/parser.output
Terminals which are not used

   HASH
   UNARY


State 1 conflicts: 3 shift/reduce
State 16 conflicts: 3 shift/reduce
State 29 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 48 conflicts: 3 shift/reduce
State 147 conflicts: 3 shift/reduce
State 151 conflicts: 3 shift/reduce
State 155 conflicts: 3 shift/reduce
State 158 conflicts: 1 shift/reduce
State 176 conflicts: 7 shift/reduce
State 180 conflicts: 1 shift/reduce
State 185 conflicts: 1 shift/reduce
State 187 conflicts: 1 shift/reduce
State 238 conflicts: 3 shift/reduce
State 266 conflicts: 1 shift/reduce
State 269 conflicts: 1 shift/reduce
State 270 conflicts: 1 shift/reduce
State 287 conflicts: 1 shift/reduce
State 315 conflicts: 1 shift/reduce
State 390 conflicts: 1 shift/reduce
State 431 conflicts: 1 shift/reduce
State 454 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: /* empty */
    2                 | translation_unit external_declaration

    3 external_declaration: preprocessor_directive
    4                     | function_definition
    5                     | function_declaration
    6                     | declaration
    7                     | typedef_declaration
    8                     | class_declaration
    9                     | struct_declaration
   10                     | enum_declaration
   11                     | union_declaration
   12                     | template_declaration
   13                     | error RIGHT_BRACE

   14 preprocessor_directive: PP_INCLUDE HEADER_NAME
   15                       | PP_DEFINE IDENTIFIER constant_expression
   16                       | PP_DEFINE IDENTIFIER
   17                       | IDENTIFIER MALFORMED_DIRECTIVE

   18 template_declaration: template_head external_declaration

   19 template_head: TEMPLATE LT TYPENAME IDENTIFIER GT
   20              | TEMPLATE LT CLASS IDENTIFIER GT

   21 class_head: CLASS named_identifier

   22 struct_head: STRUCT named_identifier

   23 enum_head: ENUM named_identifier

   24 union_head: UNION named_identifier

   25 class_declaration: class_head inheritance_opt LEFT_BRACE member_list RIGHT_BRACE SEMICOLON
   26                  | class_head inheritance_opt LEFT_BRACE member_list RIGHT_BRACE

   27 inheritance_opt: /* empty */
   28                | COLON access_specifier_opt base_class_list

   29 access_specifier_opt: /* empty */
   30                     | access_specifier

   31 access_specifier: PUBLIC
   32                 | PRIVATE
   33                 | PROTECTED

   34 base_class_list: qualified_name
   35                | TYPE_NAME
   36                | base_class_list COMMA access_specifier_opt qualified_name

   37 member_list: /* empty */
   38            | member_list member_declaration

   39 member_declaration: access_specifier COLON
   40                   | function_definition
   41                   | function_declaration
   42                   | declaration
   43                   | typedef_declaration
   44                   | class_declaration
   45                   | struct_declaration
   46                   | enum_declaration
   47                   | union_declaration
   48                   | constructor_definition

   49 constructor_definition: qualified_name LEFT_PAREN parameter_list_opt RIGHT_PAREN compound_statement

   50 struct_declaration: struct_head LEFT_BRACE member_list RIGHT_BRACE SEMICOLON
   51                   | struct_head LEFT_BRACE member_list RIGHT_BRACE

   52 union_declaration: union_head LEFT_BRACE member_list RIGHT_BRACE SEMICOLON
   53                  | union_head LEFT_BRACE member_list RIGHT_BRACE

   54 enum_declaration: enum_head LEFT_BRACE enumerator_list_opt RIGHT_BRACE SEMICOLON
   55                 | enum_head LEFT_BRACE enumerator_list_opt RIGHT_BRACE

   56 enumerator_list_opt: /* empty */
   57                    | enumerator_list

   58 enumerator_list: named_identifier
   59                | named_identifier ASSIGN constant_expression
   60                | enumerator_list COMMA named_identifier
   61                | enumerator_list COMMA named_identifier ASSIGN constant_expression

   62 function_definition: declaration_specifiers function_declarator compound_statement

   63 declaration: declaration_specifiers init_declarator_list SEMICOLON

   64 function_declaration: declaration_specifiers function_declarator SEMICOLON

   65 typedef_declaration: TYPEDEF declaration_specifiers typedef_declarator_list SEMICOLON

   66 typedef_declarator_list: typedef_declarator
   67                        | typedef_declarator_list COMMA typedef_declarator

   68 typedef_declarator: declarator
   69                   | declarator ASSIGN initializer

   70 declaration_specifiers: declaration_prefix_opt type_specifier type_suffixes

   71 declaration_prefix_opt: /* empty */
   72                       | declaration_prefix_opt declaration_prefix

   73 declaration_prefix: type_qualifier
   74                   | storage_class_specifier
   75                   | function_specifier
   76                   | constexpr_specifier

   77 type_suffixes: /* empty */
   78              | type_suffixes type_suffix

   79 type_suffix: SHORT
   80            | LONG
   81            | LONG_LONG
   82            | SIGNED
   83            | UNSIGNED
   84            | CONST
   85            | VOLATILE

   86 storage_class_specifier: STATIC
   87                        | EXTERN
   88                        | REGISTER
   89                        | FRIEND

   90 function_specifier: INLINE

   91 constexpr_specifier: CONSTEXPR

   92 type_qualifier: CONST
   93               | VOLATILE

   94 type_specifier: VOID
   95               | CHAR
   96               | INT
   97               | FLOAT
   98               | DOUBLE
   99               | BOOL
  100               | AUTO
  101               | SHORT
  102               | LONG
  103               | LONG_LONG
  104               | SIGNED
  105               | UNSIGNED
  106               | TYPE_NAME
  107               | STRUCT named_identifier
  108               | STRUCT TYPE_NAME
  109               | ENUM named_identifier
  110               | ENUM TYPE_NAME
  111               | UNION named_identifier
  112               | UNION TYPE_NAME
  113               | TYPENAME qualified_name

  114 init_declarator_list: init_declarator
  115                     | init_declarator_list COMMA init_declarator

  116 init_declarator: declarator
  117                | declarator ASSIGN initializer
  118                | declarator LEFT_PAREN argument_expression_list_opt RIGHT_PAREN

  119 initializer: assignment_expression
  120            | LEFT_BRACE initializer_list_opt RIGHT_BRACE

  121 initializer_list_opt: /* empty */
  122                     | initializer_list

  123 initializer_list: initializer
  124                 | initializer_list COMMA initializer
  125                 | initializer_list COMMA

  126 declarator: pointer_opt reference_opt direct_declarator
  127           | function_pointer_declarator

  128 reference_opt: /* empty */
  129              | reference

  130 reference: BITAND
  131          | ANDAND

  132 pointer_opt: /* empty */
  133            | pointer

  134 pointer: STAR pointer_after_star

  135 pointer_after_star: /* empty */
  136                   | pointer
  137                   | type_qualifier_list pointer_after_star

  138 type_qualifier_list: type_qualifier

  139 direct_declarator: qualified_name
  140                  | OPERATOR overload_operator
  141                  | LEFT_PAREN declarator RIGHT_PAREN
  142                  | direct_declarator LEFT_BRACKET constant_expression_opt RIGHT_BRACKET

  143 function_pointer_declarator: LEFT_PAREN pointer named_identifier RIGHT_PAREN LEFT_PAREN parameter_list_opt RIGHT_PAREN

  144 function_declarator: pointer_opt reference_opt function_direct_declarator function_cv_qualifier_seq_opt

  145 function_cv_qualifier_seq_opt: /* empty */
  146                              | function_cv_qualifier_seq_opt type_qualifier

  147 function_direct_declarator: named_identifier LEFT_PAREN parameter_list_opt RIGHT_PAREN
  148                           | qualified_name LEFT_PAREN parameter_list_opt RIGHT_PAREN
  149                           | OPERATOR overload_operator LEFT_PAREN parameter_list_opt RIGHT_PAREN
  150                           | LEFT_PAREN function_declarator RIGHT_PAREN LEFT_PAREN parameter_list_opt RIGHT_PAREN

  151 overload_operator: PLUS
  152                  | MINUS
  153                  | STAR
  154                  | SLASH
  155                  | PERCENT
  156                  | ASSIGN
  157                  | EQ
  158                  | LT
  159                  | GT
  160                  | LEFT_BRACKET RIGHT_BRACKET
  161                  | LEFT_PAREN RIGHT_PAREN

  162 constant_expression_opt: /* empty */
  163                        | constant_expression

  164 parameter_list_opt: /* empty */
  165                   | parameter_list

  166 parameter_list: parameter_declaration
  167               | parameter_list COMMA parameter_declaration
  168               | parameter_list COMMA ELLIPSIS
  169               | ELLIPSIS

  170 parameter_declaration: declaration_specifiers parameter_declarator default_argument_opt
  171                      | declaration_specifiers default_argument_opt

  172 parameter_declarator: declarator

  173 default_argument_opt: /* empty */
  174                     | ASSIGN initializer

  175 compound_statement: LEFT_BRACE block_item_list_opt RIGHT_BRACE

  176 block_item_list_opt: /* empty */
  177                    | block_item_list

  178 block_item_list: block_item
  179                | block_item_list block_item

  180 block_item: statement
  181           | declaration
  182           | typedef_declaration

  183 statement: compound_statement
  184          | expression_statement
  185          | selection_statement
  186          | iteration_statement
  187          | jump_statement
  188          | labeled_statement
  189          | error SEMICOLON

  190 expression_statement: expression_opt SEMICOLON

  191 selection_statement: IF LEFT_PAREN expression RIGHT_PAREN statement
  192                    | IF LEFT_PAREN expression RIGHT_PAREN statement ELSE statement
  193                    | SWITCH LEFT_PAREN expression RIGHT_PAREN statement

  194 iteration_statement: WHILE LEFT_PAREN expression RIGHT_PAREN statement
  195                    | UNTIL LEFT_PAREN expression RIGHT_PAREN statement
  196                    | DO statement WHILE LEFT_PAREN expression RIGHT_PAREN SEMICOLON
  197                    | DO statement UNTIL LEFT_PAREN expression RIGHT_PAREN SEMICOLON
  198                    | FOR LEFT_PAREN for_init_opt SEMICOLON expression_opt SEMICOLON expression_opt RIGHT_PAREN statement

  199 for_init_opt: /* empty */
  200             | expression
  201             | declaration_specifiers init_declarator_list

  202 jump_statement: GOTO named_identifier SEMICOLON
  203               | CONTINUE SEMICOLON
  204               | BREAK SEMICOLON
  205               | RETURN expression_opt SEMICOLON

  206 labeled_statement: named_identifier COLON statement
  207                  | CASE constant_expression COLON statement
  208                  | DEFAULT COLON statement

  209 expression_opt: /* empty */
  210               | expression

  211 expression: assignment_expression
  212           | expression COMMA assignment_expression

  213 assignment_expression: conditional_expression
  214                      | logical_or_expression assignment_operator assignment_expression

  215 assignment_operator: ASSIGN
  216                    | ADD_ASSIGN
  217                    | SUB_ASSIGN
  218                    | MUL_ASSIGN
  219                    | DIV_ASSIGN
  220                    | MOD_ASSIGN
  221                    | AND_ASSIGN
  222                    | OR_ASSIGN
  223                    | XOR_ASSIGN
  224                    | SHL_ASSIGN
  225                    | SHR_ASSIGN

  226 conditional_expression: logical_or_expression
  227                       | logical_or_expression QUESTION_MARK expression COLON conditional_expression

  228 constant_expression: conditional_expression

  229 logical_or_expression: logical_and_expression
  230                      | logical_or_expression OROR logical_and_expression

  231 logical_and_expression: inclusive_or_expression
  232                       | logical_and_expression ANDAND inclusive_or_expression

  233 inclusive_or_expression: exclusive_or_expression
  234                        | inclusive_or_expression BITOR exclusive_or_expression

  235 exclusive_or_expression: and_expression
  236                        | exclusive_or_expression BITXOR and_expression

  237 and_expression: equality_expression
  238               | and_expression BITAND equality_expression

  239 equality_expression: relational_expression
  240                    | equality_expression EQ relational_expression
  241                    | equality_expression NE relational_expression

  242 relational_expression: shift_expression
  243                      | relational_expression LT shift_expression
  244                      | relational_expression GT shift_expression
  245                      | relational_expression LE shift_expression
  246                      | relational_expression GE shift_expression

  247 shift_expression: additive_expression
  248                 | shift_expression SHL additive_expression
  249                 | shift_expression SHR additive_expression

  250 additive_expression: multiplicative_expression
  251                    | additive_expression PLUS multiplicative_expression
  252                    | additive_expression MINUS multiplicative_expression

  253 multiplicative_expression: cast_expression
  254                          | multiplicative_expression STAR cast_expression
  255                          | multiplicative_expression SLASH cast_expression
  256                          | multiplicative_expression PERCENT cast_expression

  257 cast_expression: unary_expression
  258                | LEFT_PAREN type_id RIGHT_PAREN cast_expression

  259 type_id: declaration_specifiers pointer_opt

  260 unary_expression: postfix_expression
  261                 | INC unary_expression
  262                 | DEC unary_expression
  263                 | BITAND cast_expression
  264                 | STAR cast_expression
  265                 | PLUS cast_expression
  266                 | MINUS cast_expression
  267                 | NOT cast_expression
  268                 | BITNOT cast_expression
  269                 | SIZEOF unary_expression
  270                 | SIZEOF LEFT_PAREN type_id RIGHT_PAREN
  271                 | NEW type_id
  272                 | NEW type_id LEFT_PAREN argument_expression_list_opt RIGHT_PAREN
  273                 | NEW type_id LEFT_BRACKET expression RIGHT_BRACKET
  274                 | DELETE cast_expression
  275                 | DELETE LEFT_BRACKET RIGHT_BRACKET cast_expression

  276 postfix_expression: primary_expression
  277                   | postfix_expression LEFT_BRACKET expression RIGHT_BRACKET
  278                   | postfix_expression LEFT_PAREN argument_expression_list_opt RIGHT_PAREN
  279                   | postfix_expression DOT named_identifier
  280                   | postfix_expression ARROW named_identifier
  281                   | postfix_expression INC
  282                   | postfix_expression DEC

  283 argument_expression_list_opt: /* empty */
  284                             | argument_expression_list

  285 argument_expression_list: assignment_expression
  286                         | argument_expression_list COMMA assignment_expression

  287 primary_expression: IDENTIFIER
  288                   | IDENTIFIER SCOPE named_identifier
  289                   | INTEGER_LITERAL
  290                   | FLOAT_LITERAL
  291                   | EXPONENT_NUMBER_LITERAL
  292                   | HEXADECIMAL_LITERAL
  293                   | BINARY_LITERAL
  294                   | BOOLEAN_LITERAL
  295                   | STRING_LITERAL
  296                   | CHAR_LITERAL
  297                   | NULLPTR
  298                   | THIS
  299                   | PRINTF_FUNCTION
  300                   | SCANF_FUNCTION
  301                   | MALLOC_FUNCTION
  302                   | CALLOC_FUNCTION
  303                   | REALLOC_FUNCTION
  304                   | FREE_FUNCTION
  305                   | LEFT_PAREN expression RIGHT_PAREN
  306                   | lambda_expression

  307 lambda_expression: LEFT_BRACKET capture_list_opt RIGHT_BRACKET LEFT_PAREN parameter_list_opt RIGHT_PAREN lambda_return_opt compound_statement

  308 capture_list_opt: /* empty */
  309                 | capture_list

  310 capture_list: capture_item
  311             | capture_list COMMA capture_item

  312 capture_item: named_identifier
  313             | BITAND named_identifier
  314             | ASSIGN
  315             | BITAND

  316 lambda_return_opt: /* empty */
  317                  | ARROW type_id

  318 qualified_name: named_identifier
  319               | qualified_name SCOPE named_identifier

  320 named_identifier: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256) 13 189
BOOL (258) 99
BREAK (259) 204
CASE (260) 207
CHAR (261) 95
CONST (262) 84 92
CONSTEXPR (263) 91
CONTINUE (264) 203
DEFAULT (265) 208
DO (266) 196 197
DOUBLE (267) 98
ELSE (268) 192
EXTERN (269) 87
FLOAT (270) 97
FOR (271) 198
FRIEND (272) 89
GOTO (273) 202
IF (274) 191 192
INLINE (275) 90
INT (276) 96
LONG (277) 80 102
LONG_LONG (278) 81 103
NULLPTR (279) 297
OPERATOR (280) 140 149
RETURN (281) 205
SHORT (282) 79 101
SIGNED (283) 82 104
SIZEOF (284) 269 270
STATIC (285) 86
STRUCT (286) 22 107 108
SWITCH (287) 193
TEMPLATE (288) 19 20
TYPENAME (289) 19 113
TYPEDEF (290) 65
UNSIGNED (291) 83 105
VOID (292) 94
WHILE (293) 194 196
CLASS (294) 20 21
NEW (295) 271 272 273
DELETE (296) 274 275
PUBLIC (297) 31
PRIVATE (298) 32
PROTECTED (299) 33
UNTIL (300) 195 197
ENUM (301) 23 109 110
UNION (302) 24 111 112
AUTO (303) 100
REGISTER (304) 88
VOLATILE (305) 85 93
THIS (306) 298
IDENTIFIER (307) 15 16 17 19 20 287 288 320
TYPE_NAME (308) 35 106 108 110 112
INTEGER_LITERAL (309) 289
FLOAT_LITERAL (310) 290
EXPONENT_NUMBER_LITERAL (311) 291
HEXADECIMAL_LITERAL (312) 292
BINARY_LITERAL (313) 293
BOOLEAN_LITERAL (314) 294
STRING_LITERAL (315) 295
CHAR_LITERAL (316) 296
PRINTF_FUNCTION (317) 299
SCANF_FUNCTION (318) 300
MALLOC_FUNCTION (319) 301
CALLOC_FUNCTION (320) 302
REALLOC_FUNCTION (321) 303
FREE_FUNCTION (322) 304
PP_INCLUDE (323) 14
HEADER_NAME (324) 14
PP_DEFINE (325) 15 16
INC (326) 261 281
DEC (327) 262 282
PLUS (328) 151 251 265
MINUS (329) 152 252 266
STAR (330) 134 153 254 264
SLASH (331) 154 255
PERCENT (332) 155 256
ADD_ASSIGN (333) 216
SUB_ASSIGN (334) 217
MUL_ASSIGN (335) 218
DIV_ASSIGN (336) 219
MOD_ASSIGN (337) 220
ASSIGN (338) 59 61 69 117 156 174 215 314
EQ (339) 157 240
NE (340) 241
LE (341) 245
GE (342) 246
LT (343) 19 20 158 243
GT (344) 19 20 159 244
ANDAND (345) 131 232
OROR (346) 230
NOT (347) 267
SHL_ASSIGN (348) 224
SHR_ASSIGN (349) 225
SHL (350) 248
SHR (351) 249
AND_ASSIGN (352) 221
OR_ASSIGN (353) 222
XOR_ASSIGN (354) 223
BITAND (355) 130 238 263 313 315
BITOR (356) 234
BITXOR (357) 236
BITNOT (358) 268
ARROW (359) 280 317
SCOPE (360) 288 319
SEMICOLON (361) 25 50 52 54 63 64 65 189 190 196 197 198 202 203 204
    205
COMMA (362) 36 60 61 67 115 124 125 167 168 212 286 311
LEFT_PAREN (363) 49 118 141 143 147 148 149 150 161 191 192 193 194
    195 196 197 198 258 270 272 278 305 307
RIGHT_PAREN (364) 49 118 141 143 147 148 149 150 161 191 192 193 194
    195 196 197 198 258 270 272 278 305 307
LEFT_BRACE (365) 25 26 50 51 52 53 54 55 120 175
RIGHT_BRACE (366) 13 25 26 50 51 52 53 54 55 120 175
LEFT_BRACKET (367) 142 160 273 275 277 307
RIGHT_BRACKET (368) 142 160 273 275 277 307
COLON (369) 28 39 206 207 208 227
QUESTION_MARK (370) 227
HASH (371)
DOT (372) 279
ELLIPSIS (373) 168 169
MALFORMED_DIRECTIVE (374) 17
UNARY (375)
UMINUS (376)
LOWER_THAN_ELSE (377)


Nonterminals, with rules where they appear

$accept (123)
    on left: 0
translation_unit (124)
    on left: 1 2, on right: 0 2
external_declaration (125)
    on left: 3 4 5 6 7 8 9 10 11 12 13, on right: 2 18
preprocessor_directive (126)
    on left: 14 15 16 17, on right: 3
template_declaration (127)
    on left: 18, on right: 12
template_head (128)
    on left: 19 20, on right: 18
class_head (129)
    on left: 21, on right: 25 26
struct_head (130)
    on left: 22, on right: 50 51
enum_head (131)
    on left: 23, on right: 54 55
union_head (132)
    on left: 24, on right: 52 53
class_declaration (133)
    on left: 25 26, on right: 8 44
inheritance_opt (134)
    on left: 27 28, on right: 25 26
access_specifier_opt (135)
    on left: 29 30, on right: 28 36
access_specifier (136)
    on left: 31 32 33, on right: 30 39
base_class_list (137)
    on left: 34 35 36, on right: 28 36
member_list (138)
    on left: 37 38, on right: 25 26 38 50 51 52 53
member_declaration (139)
    on left: 39 40 41 42 43 44 45 46 47 48, on right: 38
constructor_definition (140)
    on left: 49, on right: 48
struct_declaration (141)
    on left: 50 51, on right: 9 45
union_declaration (142)
    on left: 52 53, on right: 11 47
enum_declaration (143)
    on left: 54 55, on right: 10 46
enumerator_list_opt (144)
    on left: 56 57, on right: 54 55
enumerator_list (145)
    on left: 58 59 60 61, on right: 57 60 61
function_definition (146)
    on left: 62, on right: 4 40
declaration (147)
    on left: 63, on right: 6 42 181
function_declaration (148)
    on left: 64, on right: 5 41
typedef_declaration (149)
    on left: 65, on right: 7 43 182
typedef_declarator_list (150)
    on left: 66 67, on right: 65 67
typedef_declarator (151)
    on left: 68 69, on right: 66 67
declaration_specifiers (152)
    on left: 70, on right: 62 63 64 65 170 171 201 259
declaration_prefix_opt (153)
    on left: 71 72, on right: 70 72
declaration_prefix (154)
    on left: 73 74 75 76, on right: 72
type_suffixes (155)
    on left: 77 78, on right: 70 78
type_suffix (156)
    on left: 79 80 81 82 83 84 85, on right: 78
storage_class_specifier (157)
    on left: 86 87 88 89, on right: 74
function_specifier (158)
    on left: 90, on right: 75
constexpr_specifier (159)
    on left: 91, on right: 76
type_qualifier (160)
    on left: 92 93, on right: 73 138 146
type_specifier (161)
    on left: 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108
    109 110 111 112 113, on right: 70
init_declarator_list (162)
    on left: 114 115, on right: 63 115 201
init_declarator (163)
    on left: 116 117 118, on right: 114 115
initializer (164)
    on left: 119 120, on right: 69 117 123 124 174
initializer_list_opt (165)
    on left: 121 122, on right: 120
initializer_list (166)
    on left: 123 124 125, on right: 122 124 125
declarator (167)
    on left: 126 127, on right: 68 69 116 117 118 141 172
reference_opt (168)
    on left: 128 129, on right: 126 144
reference (169)
    on left: 130 131, on right: 129
pointer_opt (170)
    on left: 132 133, on right: 126 144 259
pointer (171)
    on left: 134, on right: 133 136 143
pointer_after_star (172)
    on left: 135 136 137, on right: 134 137
type_qualifier_list (173)
    on left: 138, on right: 137
direct_declarator (174)
    on left: 139 140 141 142, on right: 126 142
function_pointer_declarator (175)
    on left: 143, on right: 127
function_declarator (176)
    on left: 144, on right: 62 64 150
function_cv_qualifier_seq_opt (177)
    on left: 145 146, on right: 144 146
function_direct_declarator (178)
    on left: 147 148 149 150, on right: 144
overload_operator (179)
    on left: 151 152 153 154 155 156 157 158 159 160 161,
    on right: 140 149
constant_expression_opt (180)
    on left: 162 163, on right: 142
parameter_list_opt (181)
    on left: 164 165, on right: 49 143 147 148 149 150 307
parameter_list (182)
    on left: 166 167 168 169, on right: 165 167 168
parameter_declaration (183)
    on left: 170 171, on right: 166 167
parameter_declarator (184)
    on left: 172, on right: 170
default_argument_opt (185)
    on left: 173 174, on right: 170 171
compound_statement (186)
    on left: 175, on right: 49 62 183 307
block_item_list_opt (187)
    on left: 176 177, on right: 175
block_item_list (188)
    on left: 178 179, on right: 177 179
block_item (189)
    on left: 180 181 182, on right: 178 179
statement (190)
    on left: 183 184 185 186 187 188 189, on right: 180 191 192 193
    194 195 196 197 198 206 207 208
expression_statement (191)
    on left: 190, on right: 184
selection_statement (192)
    on left: 191 192 193, on right: 185
iteration_statement (193)
    on left: 194 195 196 197 198, on right: 186
for_init_opt (194)
    on left: 199 200 201, on right: 198
jump_statement (195)
    on left: 202 203 204 205, on right: 187
labeled_statement (196)
    on left: 206 207 208, on right: 188
expression_opt (197)
    on left: 209 210, on right: 190 198 205
expression (198)
    on left: 211 212, on right: 191 192 193 194 195 196 197 200 210
    212 227 273 277 305
assignment_expression (199)
    on left: 213 214, on right: 119 211 212 214 285 286
assignment_operator (200)
    on left: 215 216 217 218 219 220 221 222 223 224 225,
    on right: 214
conditional_expression (201)
    on left: 226 227, on right: 213 227 228
constant_expression (202)
    on left: 228, on right: 15 59 61 163 207
logical_or_expression (203)
    on left: 229 230, on right: 214 226 227 230
logical_and_expression (204)
    on left: 231 232, on right: 229 230 232
inclusive_or_expression (205)
    on left: 233 234, on right: 231 232 234
exclusive_or_expression (206)
    on left: 235 236, on right: 233 234 236
and_expression (207)
    on left: 237 238, on right: 235 236 238
equality_expression (208)
    on left: 239 240 241, on right: 237 238 240 241
relational_expression (209)
    on left: 242 243 244 245 246, on right: 239 240 241 243 244 245
    246
shift_expression (210)
    on left: 247 248 249, on right: 242 243 244 245 246 248 249
additive_expression (211)
    on left: 250 251 252, on right: 247 248 249 251 252
multiplicative_expression (212)
    on left: 253 254 255 256, on right: 250 251 252 254 255 256
cast_expression (213)
    on left: 257 258, on right: 253 254 255 256 258 263 264 265 266
    267 268 274 275
type_id (214)
    on left: 259, on right: 258 270 271 272 273 317
unary_expression (215)
    on left: 260 261 262 263 264 265 266 267 268 269 270 271 272 273
    274 275, on right: 257 261 262 269
postfix_expression (216)
    on left: 276 277 278 279 280 281 282, on right: 260 277 278 279
    280 281 282
argument_expression_list_opt (217)
    on left: 283 284, on right: 118 272 278
argument_expression_list (218)
    on left: 285 286, on right: 284 286
primary_expression (219)
    on left: 287 288 289 290 291 292 293 294 295 296 297 298 299 300
    301 302 303 304 305 306, on right: 276
lambda_expression (220)
    on left: 307, on right: 306
capture_list_opt (221)
    on left: 308 309, on right: 307
capture_list (222)
    on left: 310 311, on right: 309 311
capture_item (223)
    on left: 312 313 314 315, on right: 310 311
lambda_return_opt (224)
    on left: 316 317, on right: 307
qualified_name (225)
    on left: 318 319, on right: 34 36 49 113 139 148 319
named_identifier (226)
    on left: 320, on right: 21 22 23 24 58 59 60 61 107 109 111 143
    147 202 206 279 280 288 312 313 318 319


state 0

    0 $accept: . translation_unit $end

    $default  reduce using rule 1 (translation_unit)

    translation_unit  go to state 1


state 1

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 2
    error       shift, and go to state 3
    STRUCT      shift, and go to state 4
    TEMPLATE    shift, and go to state 5
    TYPEDEF     shift, and go to state 6
    CLASS       shift, and go to state 7
    ENUM        shift, and go to state 8
    UNION       shift, and go to state 9
    IDENTIFIER  shift, and go to state 10
    PP_INCLUDE  shift, and go to state 11
    PP_DEFINE   shift, and go to state 12

    BOOL       reduce using rule 71 (declaration_prefix_opt)
    CHAR       reduce using rule 71 (declaration_prefix_opt)
    CONST      reduce using rule 71 (declaration_prefix_opt)
    CONSTEXPR  reduce using rule 71 (declaration_prefix_opt)
    DOUBLE     reduce using rule 71 (declaration_prefix_opt)
    EXTERN     reduce using rule 71 (declaration_prefix_opt)
    FLOAT      reduce using rule 71 (declaration_prefix_opt)
    FRIEND     reduce using rule 71 (declaration_prefix_opt)
    INLINE     reduce using rule 71 (declaration_prefix_opt)
    INT        reduce using rule 71 (declaration_prefix_opt)
    LONG       reduce using rule 71 (declaration_prefix_opt)
    LONG_LONG  reduce using rule 71 (declaration_prefix_opt)
    SHORT      reduce using rule 71 (declaration_prefix_opt)
    SIGNED     reduce using rule 71 (declaration_prefix_opt)
    STATIC     reduce using rule 71 (declaration_prefix_opt)
    STRUCT     [reduce using rule 71 (declaration_prefix_opt)]
    TYPENAME   reduce using rule 71 (declaration_prefix_opt)
    UNSIGNED   reduce using rule 71 (declaration_prefix_opt)
    VOID       reduce using rule 71 (declaration_prefix_opt)
    ENUM       [reduce using rule 71 (declaration_prefix_opt)]
    UNION      [reduce using rule 71 (declaration_prefix_opt)]
    AUTO       reduce using rule 71 (declaration_prefix_opt)
    REGISTER   reduce using rule 71 (declaration_prefix_opt)
    VOLATILE   reduce using rule 71 (declaration_prefix_opt)
    TYPE_NAME  reduce using rule 71 (declaration_prefix_opt)

    external_declaration    go to state 13
    preprocessor_directive  go to state 14
    template_declaration    go to state 15
    template_head           go to state 16
    class_head              go to state 17
    struct_head             go to state 18
    enum_head               go to state 19
    union_head              go to state 20
    class_declaration       go to state 21
    struct_declaration      go to state 22
    union_declaration       go to state 23
    enum_declaration        go to state 24
    function_definition     go to state 25
    declaration             go to state 26
    function_declaration    go to state 27
    typedef_declaration     go to state 28
    declaration_specifiers  go to state 29
    declaration_prefix_opt  go to state 30


state 2

    0 $accept: translation_unit $end .

    $default  accept


state 3

   13 external_declaration: error . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 31


state 4

   22 struct_head: STRUCT . named_identifier

    IDENTIFIER  shift, and go to state 32

    named_identifier  go to state 33


state 5

   19 template_head: TEMPLATE . LT TYPENAME IDENTIFIER GT
   20              | TEMPLATE . LT CLASS IDENTIFIER GT

    LT  shift, and go to state 34


state 6

   65 typedef_declaration: TYPEDEF . declaration_specifiers typedef_declarator_list SEMICOLON

    $default  reduce using rule 71 (declaration_prefix_opt)

    declaration_specifiers  go to state 35
    declaration_prefix_opt  go to state 30


state 7

   21 class_head: CLASS . named_identifier

    IDENTIFIER  shift, and go to state 32

    named_identifier  go to state 36


state 8

   23 enum_head: ENUM . named_identifier

    IDENTIFIER  shift, and go to state 32

    named_identifier  go to state 37


state 9

   24 union_head: UNION . named_identifier

    IDENTIFIER  shift, and go to state 32

    named_identifier  go to state 38


state 10

   17 preprocessor_directive: IDENTIFIER . MALFORMED_DIRECTIVE

    MALFORMED_DIRECTIVE  shift, and go to state 39


state 11

   14 preprocessor_directive: PP_INCLUDE . HEADER_NAME

    HEADER_NAME  shift, and go to state 40


state 12

   15 preprocessor_directive: PP_DEFINE . IDENTIFIER constant_expression
   16                       | PP_DEFINE . IDENTIFIER

    IDENTIFIER  shift, and go to state 41


state 13

    2 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 2 (translation_unit)


state 14

    3 external_declaration: preprocessor_directive .

    $default  reduce using rule 3 (external_declaration)


state 15

   12 external_declaration: template_declaration .

    $default  reduce using rule 12 (external_declaration)


state 16

   18 template_declaration: template_head . external_declaration

    error       shift, and go to state 3
    STRUCT      shift, and go to state 4
    TEMPLATE    shift, and go to state 5
    TYPEDEF     shift, and go to state 6
    CLASS       shift, and go to state 7
    ENUM        shift, and go to state 8
    UNION       shift, and go to state 9
    IDENTIFIER  shift, and go to state 10
    PP_INCLUDE  shift, and go to state 11
    PP_DEFINE   shift, and go to state 12

    BOOL       reduce using rule 71 (declaration_prefix_opt)
    CHAR       reduce using rule 71 (declaration_prefix_opt)
    CONST      reduce using rule 71 (declaration_prefix_opt)
    CONSTEXPR  reduce using rule 71 (declaration_prefix_opt)
    DOUBLE     reduce using rule 71 (declaration_prefix_opt)
    EXTERN     reduce using rule 71 (declaration_prefix_opt)
    FLOAT      reduce using rule 71 (declaration_prefix_opt)
    FRIEND     reduce using rule 71 (declaration_prefix_opt)
    INLINE     reduce using rule 71 (declaration_prefix_opt)
    INT        reduce using rule 71 (declaration_prefix_opt)
    LONG       reduce using rule 71 (declaration_prefix_opt)
    LONG_LONG  reduce using rule 71 (declaration_prefix_opt)
    SHORT      reduce using rule 71 (declaration_prefix_opt)
    SIGNED     reduce using rule 71 (declaration_prefix_opt)
    STATIC     reduce using rule 71 (declaration_prefix_opt)
    STRUCT     [reduce using rule 71 (declaration_prefix_opt)]
    TYPENAME   reduce using rule 71 (declaration_prefix_opt)
    UNSIGNED   reduce using rule 71 (declaration_prefix_opt)
    VOID       reduce using rule 71 (declaration_prefix_opt)
    ENUM       [reduce using rule 71 (declaration_prefix_opt)]
    UNION      [reduce using rule 71 (declaration_prefix_opt)]
    AUTO       reduce using rule 71 (declaration_prefix_opt)
    REGISTER   reduce using rule 71 (declaration_prefix_opt)
    VOLATILE   reduce using rule 71 (declaration_prefix_opt)
    TYPE_NAME  reduce using rule 71 (declaration_prefix_opt)
